--- a/bearhug/index.html
+++ b/bearhug/index.html
@@ -6,19 +6,55 @@
     <title>BearHug v.001</title>
     <link href="./styl/darkTheme.css" type="text/css" rel="stylesheet">
     <link href="./styl/prim.css" type="text/css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./scrpt/bForAll.js"></script>
-    <script src="./scrpt/loadHandler.js"></script>
-    <script src="./scrpt/welcomeFrst.js"></script>
-    <script src="./scrpt/prevUsr.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="./data/schedule.js" type="text/javascript"></script>
+    <script src="./scrpt/setUpMagic.js" type="text/javascript"></script>
+    <script src="./scrpt/loadHandler.js" type="text/javascript"></script>
+    <script src="./scrpt/welcomeFirst.js" type="text/javascript"></script>
+    <script src="./scrpt/prevUsr.js" type="text/javascript"></script>
 </head>
 
 
 <body>
     <div id="overlay"></div>
-    <div id="schedule-container">
-        <div class="day"></div>
+    <div id="wk-container">
+        <div class="day" id="wk-day-1">
+            <!--Monday!-->
+            <div class="block" id="wk-day-1-tc-1">
+                <h1 id="wk-day-1-tc-1-h1"></h1>
+                <h2 class="time">8:15 - 9:10</h2>
+            </div>
+
+            <div class="block" id="adv-asmb">
+                <h1 id="adv-asmb-h1">Advisory/Assembly</h1>
+                <h2 class="time">9:15 - 10:00</h2>
+            </div>
+
+            <div class="block" id="wk-day-1-tc-2">
+                <h1></h1>
+                <h2 class="time">10:05 - 11:00</h2>
+            </div>
+
+            <div class="block" id="wk-day-1-tc-3l"></div>
+
+            <div class="block" id="wk-day-1-tc-4"></div>
+
+            <div class="block" id="wk-day-1-tc-5"></div>
+        </div>
+
+        <!--Tuesday!-->
+        <div class="day" id="wk-day-2"></div>
+
+        <!--Wednesday!-->
+        <div class="day" id="wk-day-3"></div>
+
+        <!--Thursday!-->
+        <div class="day" id="wk-day-4"></div>
+
+        <!--Friday!-->
+        <div class="day" id="wk-day-5"></div>
+
     </div>
 
 </body>
